# arcaive

./: Context.md  Makefile  README.md
agent/: .gitignore  agent.py  main.py  pyproject.toml  requirements.txt  summarizer.py
backend/: .gitignore  pom.xml
backend/src/main/resources/: application.properties
frontend/: components.json  migrate-dark-aggressive.js  migrate-dark-final.js  migrate-theme.js  migrate-ui-theme.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: proxy.ts
frontend/src/@types/: jobs.ts  member.ts  resume.ts  subscription.ts
frontend/src/api/: api.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/data/: billing.ts  dashboard.ts  index.ts  jobs.ts  mockMapper.ts  settings.ts
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/subscription/: page.tsx
frontend/src/app/verify-email/: page.tsx
frontend/src/components/: Benefits.tsx  FAQ.tsx  Features.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Pricing.tsx  SmoothScroll.tsx  TabsSection.tsx  Testimonials.tsx
frontend/src/components/agents-ui/: agent-audio-visualizer-bar.tsx  agent-chat-indicator.tsx  (+5 more)
frontend/src/hooks/: useMember.ts  useUser.ts
frontend/src/styles/: arcaive-tokens.css  jobColors.ts
frontend/src/utils/: auth.ts  errors.ts  location.ts  validationSchemas.ts
(+411 files in other folders)
