[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[silero,turn-detector]>=1.4.0",
    "livekit-plugins-cartesia>=1.4.5",
    "livekit-plugins-deepgram>=1.4.5",
    "livekit-plugins-google>=1.4.5",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-openai>=1.4.5",
    "livekit-plugins-silero>=1.4.5",
    "livekit-plugins-turn-detector>=1.4.5",
    "openai>=2.28.0",
    "python-dotenv>=1.2.2",
]
